--- a/_config.flexblock.yml
+++ b/_config.flexblock.yml
@@ -7,7 +7,7 @@ menu:
   好康的网站: /websites
 
 # 主页banner图
-banner: /images/banner.png
+banner: /images/banner.webp
 
 # 站点通知信息
 notice: Hi，欢迎来到我的小站，这里是我的个人博客，主要用来记录一些技术文章、生活感悟和随笔，希望你能喜欢。 ~~(づ￣ 3￣)づ
